[gd_scene load_steps=10 format=2]

[ext_resource path="res://MenuRoot.gd" type="Script" id=1]
[ext_resource path="res://MicroSix-MVRjw.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/dynamic_fonts/menu_button_dynamic_fonts.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/images/back.png" type="Texture" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://MicroSix-MVRjw.ttf"

[sub_resource type="DynamicFont" id=2]
size = 19
outline_size = 1
outline_color = Color( 0.266667, 0.290196, 0.184314, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 12
outline_color = Color( 0.8, 0.6, 1, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu/CenterContainer/VBoxContainer/ToolButton:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 28 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenu/CenterContainer/VBoxContainer/ToolButton3:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 82 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainMenu/CenterContainer/VBoxContainer/ToolButton2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 55 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainMenu/CenterContainer/VBoxContainer/Label:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MainMenu/CenterContainer/VBoxContainer/Label:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MainMenu/CenterContainer/VBoxContainer/ToolButton:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MainMenu/CenterContainer/VBoxContainer/ToolButton2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("MainMenu/CenterContainer/VBoxContainer/ToolButton3:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu/CenterContainer/VBoxContainer/ToolButton:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 50, 28 ), Vector2( 25, 28 ), Vector2( 0, 28 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MainMenu/CenterContainer/VBoxContainer/ToolButton3:rect_position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.9, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 50, 82 ), Vector2( 25, 82 ), Vector2( 0, 82 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MainMenu/CenterContainer/VBoxContainer/ToolButton2:rect_position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.3, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 50, 55 ), Vector2( 25, 55 ), Vector2( 0, 55 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MainMenu/CenterContainer/VBoxContainer/Label:rect_position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -25, 0 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("MainMenu/CenterContainer/VBoxContainer/Label:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("MainMenu/CenterContainer/VBoxContainer/ToolButton:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.9, 1.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("MainMenu/CenterContainer/VBoxContainer/ToolButton2:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.5, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("MainMenu/CenterContainer/VBoxContainer/ToolButton3:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2.1, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="CanvasLayer" type="CanvasLayer"]

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.862745, 0, 1, 1 )
margin_right = 2048.0
margin_bottom = 1536.0
rect_scale = Vector2( 0.315, 0.235 )
texture = ExtResource( 4 )

[node name="MenuRoot" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="MenuRoot"]

[node name="MainMenu" type="MarginContainer" parent="MenuRoot"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="MenuRoot/MainMenu"]
margin_right = 640.0
margin_bottom = 360.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuRoot/MainMenu/CenterContainer"]
margin_left = 187.0
margin_top = 128.0
margin_right = 452.0
margin_bottom = 232.0

[node name="Label" type="Label" parent="MenuRoot/MainMenu/CenterContainer/VBoxContainer"]
margin_right = 265.0
margin_bottom = 24.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.368627, 0.352941, 0.54902, 1 )
custom_fonts/font = SubResource( 2 )
text = "Space Type Continuum"
align = 1

[node name="ToolButton" type="ToolButton" parent="MenuRoot/MainMenu/CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 265.0
margin_bottom = 51.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.368627, 0.352941, 0.54902, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Play"

[node name="ToolButton2" type="ToolButton" parent="MenuRoot/MainMenu/CenterContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 265.0
margin_bottom = 78.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.580392, 0.564706, 0.121569, 1 )
custom_fonts/font = SubResource( 4 )
text = "Options"

[node name="ToolButton3" type="ToolButton" parent="MenuRoot/MainMenu/CenterContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 265.0
margin_bottom = 104.0
text = "Exit"

[node name="SideMenu" type="MarginContainer" parent="MenuRoot"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 640.0
margin_right = 640.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuRoot/SideMenu"]
margin_right = 640.0
margin_bottom = 360.0

[node name="Label" type="Label" parent="MenuRoot/SideMenu/VBoxContainer"]
margin_right = 640.0
margin_bottom = 14.0
text = "Options"

[node name="Label2" type="Label" parent="MenuRoot/SideMenu/VBoxContainer"]
margin_top = 18.0
margin_right = 640.0
margin_bottom = 32.0
text = "Pick some options"

[node name="ToolButton" type="ToolButton" parent="MenuRoot/SideMenu/VBoxContainer"]
margin_top = 36.0
margin_right = 640.0
margin_bottom = 58.0
text = "back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MenuRoot"]
anims/RESET = SubResource( 5 )
anims/fade_in = SubResource( 6 )

[connection signal="pressed" from="MenuRoot/MainMenu/CenterContainer/VBoxContainer/ToolButton2" to="MenuRoot" method="_on_ToolButton2_pressed"]
[connection signal="pressed" from="MenuRoot/SideMenu/VBoxContainer/ToolButton" to="MenuRoot" method="_on_ToolButton_pressed"]
